--- a/vcastplay-cms/src/app/components/preview-assets/preview-assets.component.html
+++ b/vcastplay-cms/src/app/components/preview-assets/preview-assets.component.html
@@ -1,12 +1,12 @@
 @switch (currentContent?.type) {
     @case ('video') {
-        <video class="max-h-full object-contain" [src]="currentContent?.link | safeurl" [controls]="showControls" [autoplay]="autoPlay" [muted]="true"></video>
+        <video #video class="max-h-full h-full object-contain" [src]="currentContent?.link | safeurl" [controls]="showControls" [autoplay]="autoPlay" [muted]="true"></video>
     }
     @case ('web') {
         <iframe class="w-full h-full border-none" [src]="currentContent?.link | safeurl"></iframe>
     }
     @case ('image') {
-        <img class="max-h-full object-contain" [src]="currentContent?.link | safeurl" [alt]="currentContent?.name || 'preview image'" />
+        <img class="max-h-full h-full object-contain" [src]="currentContent?.link | safeurl" [alt]="currentContent?.name || 'preview image'" />
     }
     @default {
         <div class="h-full w-full flex justify-center items-center">
