--- a/vcastplay-cms/src/app/components/preview-design-layout/preview-design-layout.component.html
+++ b/vcastplay-cms/src/app/components/preview-design-layout/preview-design-layout.component.html
@@ -1,10 +1,6 @@
-<!-- <div class="relative flex items-center justify-center h-full w-full">
-    <canvas #canvas></canvas>
-</div> -->
-
-
-<div #canvasContainer class="relative">
-    <canvas #canvas></canvas>
+<!-- <div class="relative flex items-center justify-center w-full h-full overflow-hidden object-contain max-h-full">
+    
+    <canvas #previewCanvas class=" max-w-full max-h-full block h-full"></canvas>
 
     @for (layer of canvasHTMLLayers(); track $index) {
         <div [id]="layer.id" class="absolute origin-top-left bg-aqua pointer-events-none flex items-center justify-center"
@@ -16,4 +12,18 @@
             </div>
         </div>
     }
-</div>
+</div> -->
+
+
+<canvas #previewCanvas></canvas>
+
+@for (layer of canvasHTMLLayers(); track $index) {
+    <div [id]="layer.id" class="absolute origin-top-left bg-aqua pointer-events-none flex items-center justify-center"
+        [style.top.px]="layer.top" [style.left.px]="layer.left"
+        [style.width.px]="layer.width" [style.height.px]="layer.height" [style.transform]="'rotate(' + layer.rotation + 'deg)'">
+        
+        <div class="relative flex-1 flex h-full w-full">
+            <app-preview-content-renderer [content]="layer.content" />
+        </div>
+    </div>
+}
