--- a/vcastplay-cms/src/app/pages/playlist/playlist-main-player/playlist-main-player.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-main-player/playlist-main-player.component.html
@@ -1,27 +1,25 @@
-<div #mainPlayer class="flex items-center justify-center min-h-full">
-    <div class="relative flex items-center justify-center aspect-video
+<div #mainPlayer class="flex items-center justify-center h-full">
+    <div #viewport class="relative flex items-center justify-center aspect-video
         transition-all duration-{{content().currentTransition()?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
-        <!-- <ng-container *ngIf="content().currentContent() as content">
-            @switch (content.type) {
-                @case ('design') {
-                    <app-preview-design-layout class="absolute h-full w-full inset-0" [designLayout]="content" />
-                }
-                @default {
-                    <app-preview-content-renderer class="absolute h-full w-full" [content]="content" />
-                }
-            }
-        </ng-container> -->
-        <!-- <div class="flex flex-col items-center justify-center">
-        </div> -->
         @for (item of playlistContents; track trackById($index, item)) {
             @switch (item.type) {
                 @case ('design') {
-                    <app-preview-design-layout class="absolute h-full w-full flex items-center justify-center" [currentPlaying]="content().currentContent()"
-                        [ngClass]="{ 'hidden': content().currentContent()?.contentId != item.contentId }" [designLayout]="item" />
+                    <app-preview-design-layout class="absolute flex-1 h-full w-full flex items-center justify-center" 
+                        [ngClass]="{ 
+                            'opacity-0': content().currentContent()?.contentId != item.contentId,
+                            'opacity-100': content().currentContent()?.contentId == item.contentId 
+                        }"
+                        [viewport]="viewportElement" [currentPlaying]="content().currentContent()" [designLayout]="item" />
+                    <!-- <app-preview-design-layout class="absolute flex-1 h-full w-full flex items-center justify-center" 
+                        [viewport]="viewportElement" [currentPlaying]="content().currentContent()"
+                        [ngClass]="{ 'hidden': content().currentContent()?.contentId != item.contentId }" [designLayout]="item" /> -->
                 }
                 @default {
-                    <app-preview-assets class="absolute h-full w-full flex items-center justify-center"
-                        [ngClass]="{ 'hidden': content().currentContent()?.contentId != item.contentId }" [currentPlaying]="content().currentContent()"
+                    <app-preview-assets class="absolute h-full w-full flex items-center justify-center" [currentPlaying]="content().currentContent()" 
+                        [ngClass]="{ 
+                            'opacity-0': content().currentContent()?.contentId != item.contentId,
+                            'opacity-100': content().currentContent()?.contentId == item.contentId 
+                        }"
                         [currentContent]="item" (timeUpdate)="onProgressUpdate(item.id, $event)" [autoPlay]="false" />
                 }
             }
