updated design layout and player

--- a/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
@@ -1,30 +1,30 @@
 <div class="relative w-[140px] h-full bg-[var(--p-surface-300)] flex items-center justify-center group cursor-grab"
-    [ngClass]="{ 'shadow-lg shadow-red-600/70': onCurrentPlaying() }" [pTooltip]="asset.name">
+    [ngClass]="{ 'shadow-lg shadow-red-600/70': onCurrentPlaying() }" [pTooltip]="content.name">
 
     <div class="absolute top-0 right-0 h-full w-full z-10 bg-gradient-to-t from-[var(--p-primary-500)] to-transparent ">
         <div class="flex items-center justify-center h-full gap-2 hidden bg-gray-300/60" [ngClass]="{ 'group-hover:flex': !isPlaying()}">
-            @if (!['video', 'audio', 'playlist', 'design'].includes(asset.type)) {
+            @if (!['video', 'audio', 'playlist', 'design'].includes(content.type)) {
                 <p-button severity="info" icon="pi pi-cog" pTooltip="Configuration" 
                     tooltipPosition="bottom" (onClick)="showConfig.set(true); $event.stopPropagation()" size="small" rounded />
             }
-            <p-button severity="danger" icon="pi pi-trash" pTooltip="Remove" tooltipPosition="bottom" (onClick)="onClickRemove(asset)" size="small" rounded />
+            <p-button severity="danger" icon="pi pi-trash" pTooltip="Remove" tooltipPosition="bottom" (onClick)="onClickRemove(content)" size="small" rounded />
         </div>
     </div>
 
     <div class="flex items-center justify-center h-full w-full relative">
-        @switch (asset.type) {
+        @switch (content.type) {
             @case ('design') {
-                <img [src]="asset.thumbnail ?? 'assets/icons/images.png'" [alt]="asset.name" class="absolute h-full w-full object-contain">
+                <img [src]="content.thumbnail ?? 'assets/icons/images.png'" [alt]="content.name" class="absolute h-full w-full object-contain">
             }
             @default {
-                <img [src]="asset.fileDetails.thumbnail" [alt]="asset.name" class="w-full h-full object-contain">
+                <img [src]="content.thumbnail" [alt]="content.name" class="w-full h-full object-contain">
             }
         }
     </div>
 
     <div class="absolute bottom-0 left-0 right-0 flex flex-col items-center justify-center text-center text-white w-full mb-1 z-50 px-2">
-        <p class="text-sm font-semibold truncate w-full">{{ asset.name }}</p>
-        <p class="font-semibold text-sm">{{ utils.timeConversion(asset.duration || 0) }}</p>
+        <p class="text-sm font-semibold truncate w-full">{{ content.name }}</p>
+        <p class="font-semibold text-sm">{{ utils.timeConversion(content.duration || 0) }}</p>
     </div>
 
     <div class="w-[140px] outline-dashed outline-2 outline-offset-2 outline-gray-400 z-50" *cdkDragPlaceholder></div>
@@ -36,7 +36,7 @@
     </ng-template>
     <div class="mt-3 flex gap-2 items-center justify-between">
         <p class="font-semibold">Set Duration:</p>
-        <p-inputnumber [(ngModel)]="asset.duration" [useGrouping]="false" [disabled]="['audio', 'video'].includes(asset.type)" />
+        <p-inputnumber [(ngModel)]="content.duration" [useGrouping]="false" [disabled]="['audio', 'video'].includes(content.type)" />
     </div>
     <ng-template #footer>
         <div class="float-right flex gap-3">
