--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-details/design-layout-details.component.html
@@ -22,10 +22,10 @@
             <div #canvasContainer class="relative origin-center flex items-center justify-center z-20 overflow-hidden" 
                 cdkDrag [cdkDragDisabled]="!canvasProps.drag" cdkDropList>
                 <!-- <canvas #canvas></canvas> -->
-                @for (layer of canvasHTMLLayers(); track $index) {
+                @for (layer of canvasHTMLLayers(); track trackById($index, layer)) {
                     <div class="absolute pointer-events-none z-10" [id]="layer.id" 
                         [style]="{ top: layer.top + 'px', left: layer.left + 'px', width: layer.width + 'px', 
-                            height: layer.height + 'px', transform: 'rotate(' + layer.rotation + 'deg) translateZ(0)' }">
+                            height: layer.height + 'px', transform: 'rotate(' + layer.rotation + 'deg)' }">
                         <app-playlist-main-player class="relative w-full h-full group bg-stone-800 text-white rounded-lg"
                             [playlist]="layer.content" [autoPlay]="true" [showControls]="false" />
                     </div>
