--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-list/design-layout-list.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-list/design-layout-list.component.html
@@ -43,6 +43,13 @@
                         </td>
                     </tr>
                 </ng-template>
+                <ng-template #emptymessage>
+                    <tr>
+                        <td colspan="6" [height]="20">
+                            <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+                        </td>
+                    </tr>
+                </ng-template>
             </p-table>
             <div class="block lg:hidden flex flex-col gap-4">
                 @if (!loadingSignal()) {
@@ -102,8 +109,10 @@
     </ng-template>
 </p-popover>
 
-<p-dialog header="Preview" [(visible)]="showPreview" [style]="{ width: '50rem' }" (onHide)="onClosePreview()" appendTo="body" modal>
+<p-dialog header="Preview" [(visible)]="showPreview" [style]="{ width: '50rem' }" (onHide)="onClosePreview()" appendTo="body" [resizable]="false" modal>
     <ng-container *ngIf="selectedDesign() as design">
-        <app-preview-design-layout [designLayout]="design" [isViewOnly]="true"></app-preview-design-layout>
+        <div #viewport class="flex-1 flex items-center justify-center bg-stone-800 text-white rounded-lg p-2 aspect-video">
+            <app-preview-design-layout  [designLayout]="design" [isViewOnly]="true" [viewport]="viewport" [currentPlaying]="design" />
+        </div>
     </ng-container>
 </p-dialog>
