--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -7,35 +7,29 @@
       @switch (contentData?.type) {
         @case ('design') {
           <app-preview-design-layout class="flex-1 h-full w-full flex items-center justify-center" 
-            [ngClass]="{ 
-                'opacity-0': !isPlay(),
-                'opacity-100': isPlay() 
-            }"
-            [viewport]="viewportElement" [designLayout]="contentData" [autoPlay]="true" />
+            [viewport]="viewport" [designLayout]="contentData" [autoPlay]="isPlay()" />
         }
         @case('playlist') {
-          <div #viewport class="relative flex items-center justify-center h-full w-full object-fit">
               @for (item of contentData.contents; track trackById($index, item)) {
-                  @switch (item.type) {
-                      @case ('design') {
-                          <app-preview-design-layout class="absolute flex-1 h-full w-full flex items-center justify-center" 
-                              [ngClass]="{ 
-                                  'opacity-0': content().currentContent()?.contentId != item.contentId,
-                                  'opacity-100': content().currentContent()?.contentId == item.contentId 
-                              }"
-                              [viewport]="viewportElement" [currentPlaying]="content().currentContent()" [designLayout]="item" [autoPlay]="true" />
-                      }
-                      @default {
-                          <app-preview-assets class="absolute h-full w-full flex items-center justify-center" [currentPlaying]="content().currentContent()" 
-                              [ngClass]="{ 
-                                  'opacity-0': content().currentContent()?.contentId != item.contentId,
-                                  'opacity-100': content().currentContent()?.contentId == item.contentId 
-                              }"
-                              [currentContent]="item" (timeUpdate)="onProgressUpdate(item.id, $event)" [autoPlay]="true" />
-                      }
+                @switch (item.type) {
+                  @case ('design') {
+                    <app-preview-design-layout class="absolute flex-1 h-full w-full flex items-center justify-center" 
+                      [ngClass]="{ 
+                        'opacity-0': content().currentContent()?.contentId != item.contentId,
+                        'opacity-100': content().currentContent()?.contentId == item.contentId 
+                      }"
+                      [viewport]="viewport" [currentPlaying]="content().currentContent()" [designLayout]="item" [autoPlay]="true" />
                   }
+                  @default {
+                      <app-preview-assets class="absolute h-full w-full flex items-center justify-center" [currentPlaying]="content().currentContent()" 
+                        [ngClass]="{ 
+                          'opacity-0': content().currentContent()?.contentId != item.contentId,
+                          'opacity-100': content().currentContent()?.contentId == item.contentId 
+                        }"
+                        [currentContent]="item" (timeUpdate)="onProgressUpdate(item.id, $event)" [autoPlay]="true" />
+                  }
+                }
               }
-          </div>
         }
         @default {
           <app-preview-assets class="absolute h-full w-full flex items-center justify-center" 
